--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "type-check": "tsc --noEmit",
-    "lint": "echo 'No linter configured yet'",
-    "prepublishOnly": "npm run type-check && npm test && npm run build",
+    "lint": "eslint src tests --ext .ts",
+    "lint:fix": "eslint src tests --ext .ts --fix",
+    "format": "prettier --write src/**/*.ts tests/**/*.ts",
+    "format:check": "prettier --check src/**/*.ts tests/**/*.ts",
+    "prepublishOnly": "npm run type-check && npm run lint && npm test && npm run build",
     "postinstall": "echo '✅ m2js installed! Try: m2js --help'"
   },
   "keywords": [
@@ -59,7 +62,13 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "jest": "^30.0.4",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
