--- a/package.json
+++ b/package.json
@@ -20,14 +20,23 @@
     "dev": "tsc --watch",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage --coverageReporters=html,lcov,text",
+    "test:integration": "npm run build && npm link && m2js examples/User.ts --output test-integration.md && echo '✅ Integration test passed'",
     "type-check": "tsc --noEmit",
     "lint": "eslint src tests --ext .ts",
     "lint:fix": "eslint src tests --ext .ts --fix",
     "format": "prettier --write src/**/*.ts tests/**/*.ts",
     "format:check": "prettier --check src/**/*.ts tests/**/*.ts",
-    "prepublishOnly": "npm run type-check && npm run lint && npm test && npm run build",
-    "postinstall": "echo '✅ m2js installed! Try: m2js --help'"
+    "security": "npm audit --audit-level=high",
+    "benchmark": "npm run build && npm link && echo '⚡ Running performance benchmarks...' && time m2js examples/User.ts --output benchmark.md",
+    "clean": "rm -rf dist coverage *.md m2js-*.tgz",
+    "validate": "npm run type-check && npm run lint && npm run test && npm run security",
+    "ci": "npm run type-check && npm run test && npm run build && npm run test:integration",
+    "prepublishOnly": "npm run validate && npm run build",
+    "postinstall": "echo '✅ m2js installed! Try: m2js --help'",
+    "release:patch": "npm version patch && git push && git push --tags",
+    "release:minor": "npm version minor && git push && git push --tags",
+    "release:major": "npm version major && git push && git push --tags"
   },
   "keywords": [
     "typescript",
