feat: Add best practices documentation for M2JS usage
- Introduced a comprehensive guide on best practices for M2JS, covering code organization, JSDoc standards, file structure, AI integration workflows, performance optimization, and quality guidelines.

refactor: Update configuration guide for M2JS

- Enhanced the configuration documentation with command-line options, package.json scripts, environment variables, and integration patterns for better user experience.

docs: Create a quick start guide for M2JS

- Added a quick start guide to help users install and use M2JS effectively, including examples for transforming files and generating documentation.

docs: Introduce AI analyzers reference documentation

- Documented the AI analyzers feature, detailing their purpose, usage, output examples, and configuration options for enhanced analysis capabilities.

docs: Revise CLI reference for M2JS

- Updated the CLI reference to include command options, examples, supported file types, exit codes, and common patterns for improved clarity.

chore: Update package.json for documentation site

- Added deployment script and updated dependencies for the documentation site to ensure compatibility and ease of deployment.

chore: Modify package.json prepublish script

- Changed the prepublish script to include type-checking and linting before building the project for better code quality assurance.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "clean": "rm -rf dist coverage *.md m2js-*.tgz",
     "validate": "npm run type-check && npm run lint && npm run test && npm run security",
     "ci": "npm run type-check && npm run test && npm run build && npm run test:integration",
-    "prepublishOnly": "npm run validate && npm run build",
+    "prepublishOnly": "npm run type-check && npm run lint && npm run build",
     "postinstall": "echo '✅ m2js installed! Try: m2js --help'",
     "release:patch": "npm version patch && git push && git push --tags",
     "release:minor": "npm version minor && git push && git push --tags",
