--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
-    "serve": "vitepress serve docs"
+    "preview": "vitepress preview docs",
+    "deploy": "npm run build && gh-pages -d docs/.vitepress/dist"
   },
   "devDependencies": {
-    "vue": "3.2.44",
-    "vitepress": "1.0.0-alpha.28"
+    "vue": "^3.3.0",
+    "vitepress": "^1.0.0",
+    "gh-pages": "^6.0.0"
   },
   "pnpm": {
     "peerDependencyRules": {
